[build-system]
requires = [
    "setuptools >= 64",
]
build-backend = 'setuptools.build_meta'

[project]
name = "a301_lib"
description = "a301 class code"
license = {file = "LICENSE"}
version = "0.2"
authors = [
  { name="Philip Austin", email="paustin@eoas.ubc.ca" },
]
dependencies = [
    "matplotlib",
    "numpy",
    "pyproj",
    "rioxarray"
]

[tool.setuptools]
package-dir = {"" = "src"}





